--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,13 +2,18 @@
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
+# Поддрка under curl
+set-option -as terminal-overrides ",tmux-256color:Tc"
+set -as terminal-overrides ',*:Setulc=\E[58::2::::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+
+# Поддержка гиперссылок
+set -as terminal-features ",*:hyperlinks"
+
 # Отображение картинок (для yazi)
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
-
-# Поддержка гиперссылок
-set -as terminal-features ",*:hyperlinks"
 
 # Основной префикс
 set -g prefix C-a
