--- a/steps/linux.conf.yaml
+++ b/steps/linux.conf.yaml
@@ -25,6 +25,7 @@
     ~/.vimrc: config/vimrc
     ~/.tmux.conf: config/tmux.conf
     ~/.config/bat/config: config/bat.conf
+    ~/.config/eza/theme.yaml: config/eza.theme.yaml
     ~/.config/htop/htoprc: config/htoprc
     ~/.config/bottom/bottom.toml: config/bottom.toml
 
