refactor vimrc & tmux

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,44 +1,49 @@
+### ========== Enable features ==========
+
 # True Colors
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-# Поддрка under curl
+# Under curl/line
 set-option -as terminal-overrides ",tmux-256color:Tc"
 set -as terminal-overrides ',*:Setulc=\E[58::2::::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
-# Поддержка гиперссылок
+# Hyperlinkshighlight SignColumn ctermbg=NONE guibg=NONE
 set -as terminal-features ",*:hyperlinks"
 
-# Отображение картинок (для yazi)
+# Sixel and etc
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
-# Основной префикс
+
+### ========== Core settings ==========
+
+# Main prefix
 set -g prefix C-a
 
-# Сортировка по имени
+# Sort by name
 bind s choose-tree -sZ -O name
 
-# Изменение индексов
+# Change first indexes
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Переназначение клавиш
+set -g mouse on # Enable Mouse
+set-option -g status-position top # Move status bar
+
+## Change keybindings
 unbind %
-bind | split-window -h # Вертикальный сплит
+bind | split-window -h # Vertical split
 
 unbind '"'
-bind - split-window -v # Горизонтальный сплит
+bind - split-window -v # Horizontal split
 
 unbind r
-bind r source-file ~/.tmux.conf # Перезагрузка настроек
+bind r source-file ~/.tmux.conf # Reload settings
 
-# Добавление Ctrl+L
-bind -n C-k send-keys -R \; send-keys C-l \; clear-history
-
-# Сдвиги границ
+# Resize pane
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
@@ -46,45 +51,42 @@ bind -r h resize-pane -L 5
 
 bind -r m resize-pane -Z
 
-set -g mouse on # Включение мыши
-set-option -g status-position top # Перемешение строки состояния
-
 set-window-option -g mode-keys vi
 
-# Копирование
+# Visual mode and yank like Vim
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
 
-# Плагины
-# ======================================================================
+### ========== Plugins ==========
 
 set -g @plugin 'tmux-plugins/tpm' # plugin menager
 
-# Управление
+# Core
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
-# внешний вид
+# Appearance
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @continuum-restore 'on'
+## Sessions
 
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
-### Tokyo Night Theme configuration
+## Tokyo Night Theme configuration
 
 # set -g @theme_variation '' # night, storm, moon
 set -g @theme_left_separator ''
 set -g @theme_transparent_left_separator_inverse ''
 set -g @theme_plugins 'datetime' # datetime, battery, weather
-# set -g @theme_disable_plugins 1 # Отключает плагины
+# set -g @theme_disable_plugins 1
 set -g @theme_transparent_status_bar 'true'
 
-# Старт менеджера плагинов
+# Start tpm
 run '~/.tmux/plugins/tpm/tpm'
