--- a/steps/main.conf.yaml
+++ b/steps/main.conf.yaml
@@ -4,37 +4,49 @@
       create: true
       force: true
       type: symlink
+    create:
+      mode: 0700
 
 - clean:
     ~/:
+    ~/.local/bin:
     ~/.config:
       recursive: true
 
 - link:
     # Binaries
-    ~/.local/bin/fzf-preview.sh: bin/fzf-preview.sh
+    ~/.local/bin/:
+      glob: true
+      path: bin/*
 
     # Shell
     ~/.local/bin/env: shell/env.sh
     ~/.bashrc: shell/bash/bashrc.sh
+
     ~/.zshrc: shell/zsh/zshrc.zsh
     ~/.zshenv: shell/zsh/zshenv.zsh
-    ~/.oh-my-zsh/custom/utils.zsh: shell/zsh/utils.zsh
-    ~/.oh-my-zsh/custom/aliases.zsh: shell/zsh/aliases.zsh
+    ~/.oh-my-zsh/custom/utils.zsh:
+      if: "[ -d ~/.oh-my-zsh ]"
+      path: shell/zsh/utils.zsh
+    ~/.oh-my-zsh/custom/aliases.zsh:
+      if: "[ -d ~/.oh-my-zsh ]"
+      path: shell/zsh/aliases.zsh
 
-    # Git
-    ~/.config/git/config: config/gitconfig
-    ~/.config/git/ignore: config/gitignore
+    ~/.tmux.conf: shell/tmux.conf.tmux
+    ~/.vimrc: shell/vimrc.vim
 
-    # cli utils
-    ~/.vimrc: config/vimrc
-    ~/.tmux.conf: config/tmux.conf
-    ~/.config/bat/config: config/bat.conf
-    ~/.config/eza/theme.yaml: config/eza.theme.yaml
-    ~/.config/htop/htoprc: config/htoprc
-    ~/.config/bottom/bottom.toml: config/bottom.toml
+    # Config dir
+    ~/.config:
+      glob: true
+      path: config/*
+      exclude: [config/Code]
+    ~/.config/Code/User/:
+      glob: true
+      path: config/Code/User/*
+
+    # Termux
 
 - create:
-    - ~/Downloads
-    - ~/Dev
+    - ~/downloads
+    - ~/dev
     - ~/tmp
