windows auto install

--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -17,12 +17,11 @@
 
 - link:
     # Binaries
-    ~/.local/bin/:
+    ~/.local/bin:
       glob: true
       path: bin/*
 
     # Shell
-    ~/.local/bin/env: shell/env.sh
     ~/.bashrc: shell/bash/bashrc.sh
 
     ~/.zshrc: shell/zsh/zshrc.zsh
