--- a/windows/apps/Microsoft.WindowsTerminal.Preview/settings.json
+++ b/windows/apps/Microsoft.WindowsTerminal.Preview/settings.json
@@ -25,6 +25,7 @@
       "type": "remainingProfiles"
     }
   ],
+  "defaultProfile": "PowerShell",
   "profiles": {
     "defaults": {
       "adjustIndistinguishableColors": "never",
