--- a/windows/.install.conf.yaml
+++ b/windows/.install.conf.yaml
@@ -22,7 +22,16 @@
 
     ~/.vimrc: shell/vimrc.vim
 
+    ~/.config/git: config/git
+    ~\AppData\Roaming\bottom: config/bottom
+    ~\AppData\Roaming\bat: config/bat
+    ~\AppData\Roaming\eza: config/eza
+    ~\AppData\Config\btop: config/btop
+
 - create:
     - ~/Downloads
     - ~/Dev
     - ~/Tmp
+
+- shell:
+    - [bat cache --build, Reloading bat configs]
