remove vimrc simlink

--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -35,7 +35,7 @@
       path: shell/zsh/aliases.zsh
 
     ~/.tmux.conf: shell/tmux.conf.tmux
-    ~/.vimrc: shell/vimrc.vim
+    # ~/.vimrc: shell/vimrc.vim
 
     # Config dir
     ~/.config:
