--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -34,7 +34,7 @@
       if: "[ -d ~/.oh-my-zsh ]"
       path: shell/zsh/aliases.zsh
 
-    ~/.tmux.conf: shell/tmux.conf.tmux
+    # ~/.tmux.conf: shell/tmux.conf.tmux
     # ~/.vimrc: shell/vimrc.vim
 
     # Config dir
