--- a/windows/.install.conf.yaml
+++ b/windows/.install.conf.yaml
@@ -23,7 +23,7 @@
     # ~/.vimrc: shell/vimrc.vim
 
     ~/.config/git: config/git
-    ~\AppData\Roaming\bottom: config/bottom
+    # ~\AppData\Roaming\bottom: config/bottom
     ~\AppData\Roaming\bat: config/bat
     ~\AppData\Roaming\eza: config/eza
     ~\AppData\Config\btop: config/btop
