--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -38,7 +38,7 @@ unbind '"'
 bind - split-window -v # Horizontal split
 
 unbind r
-bind r source-file ~/.tmux.conf # Reload settings
+bind r source-file "#{config_files}" \; display "Config reloaded" # Reload settings
 
 # Resize pane
 bind -r j resize-pane -D 5
