--- a/windows/apps/Microsoft.WindowsTerminal.Preview/settings.json
+++ b/windows/apps/Microsoft.WindowsTerminal.Preview/settings.json
@@ -61,23 +61,10 @@
         "source": "nu"
       },
       {
-        "name": "FedoraLinux-42",
-        "commandline": "wsl -d FedoraLinux-42",
+        "name": "WSL",
+        "commandline": "wsl.exe",
         "pathTranslationStyle": "wsl",
         "source": "Microsoft.WSL"
-      },
-      {
-        "name": "Ubuntu 24.04 LTS",
-        "commandline": "wsl -d Ubuntu-24.04",
-        "pathTranslationStyle": "wsl",
-        "source": "Microsoft.WSL"
-      },
-      {
-        "name": "Git Bash",
-        "commandline": "C:\\Program Files\\Git\\bin\\bash.exe",
-        "colorScheme": "OneDark",
-        "pathTranslationStyle": "msys2",
-        "source": "Git"
       },
       {
         "name": "Windows PowerShell",
