--- a/config/git/config
+++ b/config/git/config
@@ -1,6 +1,17 @@
 [user]
-	email = kirasolovey09@gmail.com
-	name = Kirill Solovey
+    email = kirasolovey09@gmail.com
+    name = Kirill Solovey
+[core]
+    autocrlf = true
+[alias]
+    a = add
+    d = diff
+    st = status
+    co = checkout
+    br = branch
+    cm = commit
+    cl = clone --recurse-submodules
+    lg = log --oneline --decorate --graph
+    cam = commit --all --message
 [init]
-	defaultBranch = main
-
+    defaultBranch = main
